[package]
name = "luxafor"
description = "Library, and CLI, for Luxafor lights via either USB or webhooks."
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-luxafor"
documentation = "https://docs.rs/luxafor/0.1.0/luxafor/"
edition = "2021"
license = "MIT"
readme = "README.md"
publish = true
default-run = "lux"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["webhook"]
usb = ["hidapi"]
webhook = ["reqwest"]
command-line = ["pretty_env_logger", "structopt", "usb", "webhook"]

[[bin]]
name = "lux"
path = "src/bin/main.rs"
required-features = ["command-line"]

[dependencies]
log = "0.4.11"

#[feature-dependencies]
hidapi = { version = "2.2.2", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
structopt = { version = "0.3.14", optional = true }
